Fix Navbar RTL layout for Arabic to align titles right and search/dropdown left

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -65,13 +65,56 @@
   color: #8B0000 !important;
 }
 
-.lang-ar .btn-outline-light {
-  margin-right: 8px;
+.container-fluid {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.lang-ar .search-input {
-  margin-left: 8px;
-  margin-right: 0;
+.navbar-nav {
+  display: flex;
+  flex-direction: row;
+  margin: 0 20px;
+}
+
+.navbar-actions {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.search-form {
+  margin: 0 10px;
+}
+
+.lang-ar .container-fluid {
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+}
+
+.lang-ar .navbar-nav {
+  margin: 0 20px;
+  order: 1;
+}
+
+.lang-ar .navbar-brand {
+  order: 2;
+}
+
+.lang-ar .navbar-actions {
+  order: 0;
+  margin-right: auto;
+  margin-left: 0;
+}
+
+.lang-ar .search-form {
+  margin: 0 10px;
+  flex-direction: row-reverse;
+}
+
+.lang-ar .dropdown-menu-end {
+  right: auto;
+  left: 0;
 }
 
 @media (max-width: 576px) {
@@ -80,11 +123,15 @@
     font-size: 14px;
   }
 
-  .lang-ar .btn-outline-light {
-    margin-right: 4px;
+  .navbar-nav {
+    margin: 0 10px;
   }
 
-  .lang-ar .search-input {
-    margin-left: 4px;
+  .lang-ar .navbar-nav {
+    margin: 0 10px;
+  }
+
+  .lang-ar .search-form {
+    margin: 0 5px;
   }
 }
